--- a/segurenta/src/app/components/register-property/register-property.component.css
+++ b/segurenta/src/app/components/register-property/register-property.component.css
@@ -1,3 +1,7 @@
-.dialog-register {
-    background-color: #0D62B7;
+/* .dialog-register {
+    background: #0D62B7 !important;
+} */
+
+.mat-dialog-container {
+    background: #0D62B7 !important;
 }
