--- a/segurenta/src/app/components/register-property/register-property.component.html
+++ b/segurenta/src/app/components/register-property/register-property.component.html
@@ -1,16 +1,53 @@
 <div class="txt-right">
-    <h2 mat-dialog-title><small class="txt-title-muted">Registro </small><span class="txt-title"> Titulo </span></h2>
+    <h2 mat-dialog-title><small class="txt-title-muted">Crear </small><span class="txt-title"> Propiedad </span></h2>
 </div>
-<mat-vertical-stepper [linear]="true" #stepper>
+<mat-vertical-stepper #stepper>
     <mat-step>
         <form>
             <ng-template matStepLabel>Fotos y video</ng-template>
-            <app-upload-image></app-upload-image>
+            <div class="col-12 row">
+                <div class="col-8">
+                    <div class="row">
+                        <h3>Arrastra tus archivos o da click para subir</h3>
+                    </div>
+                    <div class="row">
+                        <app-upload-image></app-upload-image>
+                        <app-upload-image></app-upload-image>
+                        <app-upload-image></app-upload-image>
+                        <app-upload-image></app-upload-image>
+
+                    </div>
+                    <div class="row">
+                        <app-upload-image></app-upload-image>
+                        <app-upload-image></app-upload-image>
+                        <app-upload-image></app-upload-image>
+                        <app-upload-image></app-upload-image>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <img src="./assets/img/imgVideo.png" class="img-thumbnail">
+                </div>
+            </div>
+
+
         </form>
     </mat-step>
     <mat-step>
-        <form>
-            <ng-template matStepLabel>Tipo de Propiedad</ng-template>
+        <form autocomplete="off">
+            <ng-template matStepLabel>Clasificación y precio</ng-template>
+            <h3>Tipo de Propiedad</h3>
+            <div class="col-12">
+                <!-- <button type="button" class="btn rounded btn-dark col-2 m-1" [ngClass]="{
+                    'active': item.selected,
+                    'inactive': !item.selected }" (click)="item.selected = !item.selected" *ngFor="let item of typeProperties">
+                    {{ item.value }}
+                </button> -->
+                <button type="button" class="btn rounded btn-outline-dark col-2 m-1" [ngClass]="{
+                    'active': item.selected,
+                    'inactive': !item.selected }" (click)="selectProperty(item.id)" *ngFor="let item of typeProperties">
+                    {{ item.value }}
+                </button>
+            </div>
             <h3>Precio</h3>
             <div class="d-inline mr-5">
                 <mat-label>$ </mat-label>
@@ -41,55 +78,57 @@
     </mat-step>
     <mat-step>
         <ng-template matStepLabel>Dirección</ng-template>
-        <h3>Dirección</h3>
-        <div class="col-sm-12">
-            <div class="col-sm-6">
-
-            </div>
-            <div class="col-sm-6">
-                <form novalidate>
-                    <mat-form-field>
+        <h3>Dirección de la Propiedad</h3>
+        <div class="col-12 row">
+            <div class="col-5"></div>
+            <div class="col">
+                <form autocomplete="off">
+                    <mat-form-field class="full-width">
                         <input type="text" matInput placeholder="Nombre del inmueble (Alias)" required>
+                    </mat-form-field>
+                    <div class="row">
+                        <div class="col-8">
+                            <mat-form-field class="full-width">
+                                <input type="text" matInput placeholder="Calle, Num. Ext. e Int." required>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-4">
+                            <mat-form-field class="full-width">
+                                <input type="text" matInput placeholder="C.P." required>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <mat-form-field class="full-width">
+                                <input type="text" matInput placeholder="Del." required>
+                            </mat-form-field>
+                        </div>
+                        <div class="col">
+                            <mat-form-field class="full-width">
+                                <input type="text" matInput placeholder="Col." required>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <mat-form-field class="full-width">
+                                <input type="text" matInput placeholder="Ciudad" required>
+                            </mat-form-field>
+                        </div>
+                        <div class="col">
+                            <mat-form-field class="full-width">
+                                <input type="text" matInput placeholder="País" required>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <mat-form-field class="full-width">
+                        <textarea matInput placeholder="Descripción general de la propiedad" required></textarea>
                     </mat-form-field>
                 </form>
             </div>
         </div>
-        <!-- <mat-grid-tile colspan="6">
-                <form [formGroup]="registerForm" (ngSubmit)="register()" novalidate="novalidate">
-                        <mat-form-field class="full-width">
-                            <input type="text" class="input-form" matInput placeholder="Nombre(s)" [(ngModel)]="renter.names" formControlName="names" required>
-                            <mat-error *ngIf="registerForm.get('names').invalid">{{getErrorMessageNames()}}</mat-error>
-                        </mat-form-field>
-                        <mat-form-field style="padding-right: 10%;">
-                            <input type="text" class="input-form" matInput placeholder="Apellido Paterno" [(ngModel)]="renter.firstLastName" formControlName="firstLastName" required>
-                            <mat-error *ngIf="registerForm.get('firstLastName').invalid">{{getErrorMessageF()}}</mat-error>
-                        </mat-form-field>
-                        <mat-form-field>
-                            <input type="text" class="input-form" matInput placeholder="Apellido Materno" [(ngModel)]="renter.secondLastName" formControlName="secondLastName" required>
-                            <mat-error *ngIf="registerForm.get('secondLastName').invalid">{{getErrorMessageS()}}</mat-error>
-                        </mat-form-field>
-                        <mat-form-field class="full-width">
-                            <input type="tel" class="input-form" matInput placeholder="Teléfono" [(ngModel)]="renter.phoneNumber" formControlName="phoneNumber" required>
-                            <mat-error *ngIf="registerForm.get('phoneNumber').invalid">{{getErrorMessagePhone()}}</mat-error>
-                        </mat-form-field>
-                        <mat-form-field class="full-width">
-                            <input type="email" class="input-form" matInput placeholder="Correo Electrónico" [(ngModel)]="renter.email" formControlName="email" required>
-                            <mat-error *ngIf="registerForm.get('email').invalid">{{getErrorMessageEmail()}}</mat-error>
-                        </mat-form-field>
-                        <mat-form-field class="full-width">
-                            <input type="password" class="input-form" matInput placeholder="Contraseña" #renter.password formControlName="password" required>
-                            <mat-error *ngIf="registerForm.get('password').invalid">{{getErrorMessagePass()}}</mat-error>
-                        </mat-form-field>
-                        <button class="btn-rounded full-width" style="margin-top: 5%;" mat-raised-button>Registrarme</button>
-                        <small class="txt-muted">Al registrarte aceptas los <a (click)="openViewer()">Términos y Condiciones</a> y las <a (click)="openViewer()">Políticas de Privacidad</a>.</small>
-                    </form>
-            <form novalidate>
-                <mat-label>Edita los datos que no coincidan del autollenado</mat-label>
-                <mat-form-field>
-                    <input type="text" matInput placeholder="Calle, Num. Ext. e Int" required>
-                </mat-form-field>
-            </form>
-        </mat-grid-tile> -->
+
     </mat-step>
     <mat-step>
         <ng-template matStepLabel>Características</ng-template>
