--- a/segurenta/src/app/components/upload-image/upload-image.component.html
+++ b/segurenta/src/app/components/upload-image/upload-image.component.html
@@ -3,7 +3,7 @@
 <input #file type="file" accept='image/*' (change)="preview(file.files)" />
 <img [src]="imgURL" height="200" *ngIf="imgURL"> -->
 
-<div class="image-upload">
+<div class="image-upload m-1">
     <input id="file-input" #file type="file" accept='image/*' (change)="preview(file.files)" />
     <label for="file-input">
     <img [src]="imgURL" class="img-thumbnail" *ngIf="imgURL">        
