--- a/segurenta/src/app/components/register-property/register-property.component.html
+++ b/segurenta/src/app/components/register-property/register-property.component.html
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <img src="./assets/img/imgVideo.png" class="img-thumbnail">
+                    <!-- <img src="./assets/img/imgVideo.png" class="img-thumbnail"> -->
                 </div>
             </div>
         </form>
