--- a/segurenta/src/app/components/upload-image/upload-image.component.html
+++ b/segurenta/src/app/components/upload-image/upload-image.component.html
@@ -46,10 +46,6 @@
     }
 </style>
 
-<ngfFormData [files]="files" postName="file" [(FormData)]="sendableFormData"></ngfFormData>
-
-<ngfUploadStatus [(percent)]="progress" [httpEvent]="httpEvent"></ngfUploadStatus>
-
 
 <!-- <div class="inline-block">
     <h3>Select Files</h3>
@@ -79,32 +75,190 @@
     </div>
 </div> -->
 
+
+
+<!-- 
 <div>
     <div class="inline-block">
-        <div ngfDrop selectable="1" [(validDrag)]="baseDropValid" (fileOver)="hasBaseDropZoneOver=$event" [(files)]="files" [accept]="accept" [maxSize]="maxSize" [(dragFiles)]="dragFiles" [(lastInvalids)]="lastInvalids" class="my-drop-zone text-center" [class.invalid-drag]="baseDropValid===false"
-            [class.valid-drag]="baseDropValid" (filesChange)="lastFileAt=getDate()">
+        <div ngfDrop selectable="1" (fileOver)="hasBaseDropZoneOver=$event" [(files)]="files" [accept]="accept" [maxSize]="maxSize" class="my-drop-zone text-center" (filesChange)="lastFileAt=getDate()">
             <span class="align-middle">Imagen</span><br>
             <span class="align-middle">( Máx. 2MB)</span>
         </div>
     </div>
 
-    <!-- <div class="inline-block">
-        <div ngfDrop [(validDrag)]="baseDropValid" (fileOver)="hasBaseDropZoneOver=$event" [(files)]="files" [accept]="accept" [maxSize]="maxSize" [(dragFiles)]="dragFiles" [(lastInvalids)]="lastInvalids" class="well my-drop-zone" [class.invalid-drag]="baseDropValid===false"
+</div> -->
+
+
+
+
+
+
+<ngfFormData [files]="files" postName="file" [(FormData)]="sendableFormData"></ngfFormData>
+
+<ngfUploadStatus [(percent)]="progress" [httpEvent]="httpEvent"></ngfUploadStatus>
+
+<div class="col-12">
+    <div class="inline-block">
+        <div ngfDrop selectable="1" [(validDrag)]="baseDropValid" (fileOver)="hasBaseDropZoneOver=$event" [(files)]="files" [accept]="accept" [maxSize]="maxSizeImage" [(dragFiles)]="dragFiles" [(lastInvalids)]="lastInvalids" class="well my-drop-zone" [class.invalid-drag]="baseDropValid===false"
             [class.valid-drag]="baseDropValid" (filesChange)="lastFileAt=getDate()">
-            Imagen
+            <div *ngFor="let item of files;let i=index">
+                <div *ngIf="['image/gif','image/png','image/jpeg'].indexOf(item.type)>=0">
+                    <div class="previewIcon" [ngfBackground]="item"></div>
+                </div>
+            </div>
+
+            <!-- <div #elseBlock>
+                <span class="align-middle">Imagen</span><br>
+                <span class="align-middle">( Máx. 2MB)</span>
+            </div> -->
+
         </div>
-        <strong>accept:</strong>
-        <div>
-            <input type="text" [(ngModel)]="accept" />
+    </div>
+
+    <div class="inline-block">
+        <div ngfDrop selectable="1" [(validDrag)]="baseDropValid" (fileOver)="hasBaseDropZoneOver=$event" [(files)]="files" [accept]="accept" [maxSize]="maxSizeImage" [(dragFiles)]="dragFiles" [(lastInvalids)]="lastInvalids" class="well my-drop-zone" [class.invalid-drag]="baseDropValid===false"
+            [class.valid-drag]="baseDropValid" (filesChange)="lastFileAt=getDate()">
+            <div *ngFor="let item of files;let i=index">
+                <div *ngIf="['image/gif','image/png','image/jpeg'].indexOf(item.type)>=0">
+                    <div class="previewIcon" [ngfBackground]="item"></div>
+                </div>
+            </div>
         </div>
-    </div> -->
+    </div>
+    <div class="inline-block">
+        <div ngfDrop selectable="1" [(validDrag)]="baseDropValid" (fileOver)="hasBaseDropZoneOver=$event" [(files)]="files" [accept]="accept" [maxSize]="maxSizeImage" [(dragFiles)]="dragFiles" [(lastInvalids)]="lastInvalids" class="well my-drop-zone" [class.invalid-drag]="baseDropValid===false"
+            [class.valid-drag]="baseDropValid" (filesChange)="lastFileAt=getDate()">
+            <div *ngFor="let item of files;let i=index">
+                <div *ngIf="['image/gif','image/png','image/jpeg'].indexOf(item.type)>=0">
+                    <div class="previewIcon" [ngfBackground]="item"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="inline-block">
+        <div ngfDrop selectable="1" [(validDrag)]="baseDropValid" (fileOver)="hasBaseDropZoneOver=$event" [(files)]="files" [accept]="accept" [maxSize]="maxSizeImage" [(dragFiles)]="dragFiles" [(lastInvalids)]="lastInvalids" class="well my-drop-zone" [class.invalid-drag]="baseDropValid===false"
+            [class.valid-drag]="baseDropValid" (filesChange)="lastFileAt=getDate()">
+            <div *ngFor="let item of files;let i=index">
+                <div *ngIf="['image/gif','image/png','image/jpeg'].indexOf(item.type)>=0">
+                    <div class="previewIcon" [ngfBackground]="item"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="col-12">
+    <div class="inline-block">
+        <div ngfDrop selectable="1" [(validDrag)]="baseDropValid" (fileOver)="hasBaseDropZoneOver=$event" [(files)]="files" [accept]="accept" [maxSize]="maxSizeImage" [(dragFiles)]="dragFiles" [(lastInvalids)]="lastInvalids" class="well my-drop-zone" [class.invalid-drag]="baseDropValid===false"
+            [class.valid-drag]="baseDropValid" (filesChange)="lastFileAt=getDate()">
+            <div *ngFor="let item of files;let i=index">
+                <div *ngIf="['image/gif','image/png','image/jpeg'].indexOf(item.type)>=0">
+                    <div class="previewIcon" [ngfBackground]="item"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="inline-block">
+        <div ngfDrop selectable="1" [(validDrag)]="baseDropValid" (fileOver)="hasBaseDropZoneOver=$event" [(files)]="files" [accept]="accept" [maxSize]="maxSizeImage" [(dragFiles)]="dragFiles" [(lastInvalids)]="lastInvalids" class="well my-drop-zone" [class.invalid-drag]="baseDropValid===false"
+            [class.valid-drag]="baseDropValid" (filesChange)="lastFileAt=getDate()">
+            <div *ngFor="let item of files;let i=index">
+                <div *ngIf="['image/gif','image/png','image/jpeg'].indexOf(item.type)>=0">
+                    <div class="previewIcon" [ngfBackground]="item"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="inline-block">
+        <div ngfDrop selectable="1" [(validDrag)]="baseDropValid" (fileOver)="hasBaseDropZoneOver=$event" [(files)]="files" [accept]="accept" [maxSize]="maxSizeImage" [(dragFiles)]="dragFiles" [(lastInvalids)]="lastInvalids" class="well my-drop-zone" [class.invalid-drag]="baseDropValid===false"
+            [class.valid-drag]="baseDropValid" (filesChange)="lastFileAt=getDate()">
+            <div *ngFor="let item of files;let i=index">
+                <div *ngIf="['image/gif','image/png','image/jpeg'].indexOf(item.type)>=0">
+                    <div class="previewIcon" [ngfBackground]="item"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="inline-block">
+        <div ngfDrop selectable="1" [(validDrag)]="baseDropValid" (fileOver)="hasBaseDropZoneOver=$event" [(files)]="files" [accept]="accept" [maxSize]="maxSizeImage" [(dragFiles)]="dragFiles" [(lastInvalids)]="lastInvalids" class="well my-drop-zone" [class.invalid-drag]="baseDropValid===false"
+            [class.valid-drag]="baseDropValid" (filesChange)="lastFileAt=getDate()">
+            <div *ngFor="let item of files;let i=index">
+                <div *ngIf="['image/gif','image/png','image/jpeg'].indexOf(item.type)>=0">
+                    <div class="previewIcon" [ngfBackground]="item"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
-<div *ngIf="dragFiles">
+<!-- <div *ngIf="dragFiles">
     <h3 style="margin:0">Drag Files</h3>
     <p *ngIf="!dragFiles.length" style="color:red;">
         This browser does NOT release metadata for files being dragged. All files will be considered valid drags until dropped.
     </p>
     <pre>{{ dragFiles | json }}</pre>
-</div>
+</div> -->
+
+<!-- <div style="margin-bottom: 40px">
+    <h3>{{ files.length }} Queued Files</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Type</th>
+                <th>Size</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of files;let i=index">
+                <td>
+                    <div *ngIf="['image/gif','image/png','image/jpeg'].indexOf(item.type)>=0">
+                        <div class="previewIcon" [ngfBackground]="item"></div>
+                    </div>
+                    <strong>{{ item.name }}</strong>
+                </td>
+                <td nowrap>
+                    {{ item.type }}
+                </td>
+                <td nowrap>
+                    {{ item.size/1024/1024 | number:'.2' }} MB
+                </td>
+                <td nowrap>
+                    <button type="button" class="btn btn-danger btn-xs" (click)="files.splice(i,1)">
+                <span class="glyphicon glyphicon-trash"></span>
+              </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <div>
+        <div>
+            Queue progress:
+            <div class="progress" style="">
+                <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': progress + '%' }"></div>
+            </div>
+        </div>
+
+        <ng-container *ngIf="lastFileAt">
+            <p>
+                <strong>Last file(s) selected At:</strong> {{ lastFileAt | date : 'longTime' }}
+            </p>
+        </ng-container>
+
+        <i *ngIf="progress==100" class="glyphicon glyphicon-ok"></i>
+
+        <button type="button" class="btn btn-success btn-s" (click)="uploadFiles(files)" [disabled]="!files.length">
+          <span class="glyphicon glyphicon-upload"></span> Upload all
+        </button>
+
+        <button type="button" class="btn btn-warning btn-s" (click)="cancel()" [disabled]="!httpEmitter">
+          <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
+        </button>
+        <button type="button" class="btn btn-danger btn-s" (click)="files.length=0" [disabled]="!files.length">
+          <span class="glyphicon glyphicon-trash"></span> Remove all
+        </button>
+    </div>
+</div> -->
