Se agrega componente update-renter y se agrega funcionalidad para actualizar datos inquilino

--- a/segurenta/src/app/components/update-renter/update-renter.component.html
+++ b/segurenta/src/app/components/update-renter/update-renter.component.html
@@ -1,29 +1,3 @@
-
-<nav class="navbar navbar-expand-lg navbar-overlay pb-1" style="background-color: rgba(0, 0, 0, 0);">
-    <a class="navbar-brand" [routerLink]="['home']">
-        <img src="./assets/img/logoSeguRenta_bco.png" width="150" height="40" class="d-inline-block align-top img-responsive">
-    </a>
-
-    <div *ngIf="!isLogged" class="collapse navbar-collapse d-flex justify-content-end">
-        <button class="btn btn-sm btn-outline-light m-1" type="button" (click)="openRegister()">Registrarse</button>
-        <button class="btn btn-sm btn-outline-light m-1" type="button" (click)="openLogin()">Entrar</button>
-    </div>
-
-    <div *ngIf="isLogged" class="collapse navbar-collapse d-flex justify-content-end">
-        <a class="btn btn-default btn-link text-white">
-            <fa-icon class="pr-3" [icon]="[ 'fas', 'bell']"></fa-icon>
-        </a>
-        <span class="badge badge-notify rounded-circle text-white">9</span>
-        <a href="#myModal" role="button" data-toggle="modal"><img src="./assets/img/usrPrueba.png" class="rounded-circle" width="30" height="30"></a>
-           
-        </div>
-    
-</nav>
-<!-- <div id="myModal" *ngIf="isRenter">
-    <app-update-renter>
-
-    </app-update-renter>
-</div> -->
 <div *ngIf="isRenter" class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
       <div class="modal-content">
@@ -90,7 +64,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalLabel">
-                  <span class="txt-center">
+                  <span class="text-center">
                         Editar <span class="text-blue-big">Perfil</span>    
                   </span>
                   
