--- a/segurenta/src/app/components/home/home.component.css
+++ b/segurenta/src/app/components/home/home.component.css
@@ -73,3 +73,7 @@ input.input-transparent::placeholder {
     background-color: rgba(255, 255, 255, 0.4) !important;
     border-color: none !important;
 }
+
+.btn-dark{
+    background-color: #000 !important;
+}
