--- a/segurenta/src/app/components/navbar/navbar.component.css
+++ b/segurenta/src/app/components/navbar/navbar.component.css
@@ -9,3 +9,17 @@
     margin-bottom: -104px;
     z-index: 1;
 }
+.modal-backdrop {
+    z-index: auto;
+}
+.text-blue-big{
+    color: #0D62B7;
+    font-size: 60px;
+}
+
+.text-center {
+    text-align: center;
+}
+.mid-width {
+    width: 40%;
+}
