Se crea componente actualizar propiedad, y se corrige en de actualizar datos inqulino asi como algunas cosas en el home-rent

--- a/segurenta/src/app/components/home-rent/home-rent.component.css
+++ b/segurenta/src/app/components/home-rent/home-rent.component.css
@@ -100,3 +100,11 @@ input.input-transparent::placeholder {
 .img-opacity:hover {
     background-color: rgba(0, 0, 0, 0);
 }
+.card-columns {
+    -webkit-column-count: 4;
+    column-count: 4;
+    -webkit-column-gap: 1.25rem;
+    column-gap: 1.25rem;
+    orphans: 1;
+    widows: 1;
+}
