--- a/segurenta/src/app/components/update-property/update-property.component.html
+++ b/segurenta/src/app/components/update-property/update-property.component.html
@@ -1,8 +1,8 @@
 <div class="txt-right">
-    <h2 mat-dialog-title><small class="txt-title-muted">Crear </small><span class="txt-title"> Propiedad </span></h2>
+    <h2 mat-dialog-title><small class="txt-title-muted">Editar </small><span class="txt-title"> Propiedad </span></h2>
 </div>
 <mat-vertical-stepper #stepper>
-    <mat-step>
+    <!-- <mat-step>
         <form>
             <ng-template matStepLabel>Fotos y video</ng-template>
             <div class="col-12 row">
@@ -19,7 +19,7 @@
                 </div>
             </div>
         </form>
-    </mat-step>
+    </mat-step> -->
     <mat-step>
         <form autocomplete="off">
             <ng-template matStepLabel>Clasificación y precio</ng-template>
@@ -35,21 +35,21 @@
             <div class="d-inline mr-5">
                 <mat-label>$ </mat-label>
                 <mat-form-field>
-                    <input type="number" matInput required>
+                    <input type="number" value="12700" matInput required>
                 </mat-form-field>
                 <mat-label> Renta al mes</mat-label>
             </div>
             <div class="d-inline mx-5">
                 <mat-label>$ </mat-label>
                 <mat-form-field>
-                    <input type="number" matInput required>
+                    <input type="number" value="122700" matInput required>
                 </mat-form-field>
                 <mat-label> Precio de venta</mat-label>
             </div>
             <div class="d-inline ml-5">
                 <mat-label>$ </mat-label>
                 <mat-form-field>
-                    <input type="number" matInput required>
+                    <input type="number" value="1200" matInput required>
                 </mat-form-field>
                 <mat-label> Mantenimiento</mat-label>
             </div>
@@ -67,46 +67,46 @@
             <div class="col">
                 <form autocomplete="off">
                     <mat-form-field class="full-width">
-                        <input type="text" matInput placeholder="Nombre del inmueble (Alias)" required>
+                        <input type="text" value="Inmueble1" matInput placeholder="Nombre del inmueble (Alias)" required>
                     </mat-form-field>
                     <div class="row">
                         <div class="col-8">
                             <mat-form-field class="full-width">
-                                <input type="text" matInput placeholder="Calle, Num. Ext. e Int." required>
+                                <input type="text" value="calle1 2004" matInput placeholder="Calle, Num. Ext. e Int." required>
                             </mat-form-field>
                         </div>
                         <div class="col-4">
                             <mat-form-field class="full-width">
-                                <input type="text" matInput placeholder="C.P." required>
+                                <input type="text" value="54054" matInput placeholder="C.P." required>
                             </mat-form-field>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <mat-form-field class="full-width">
-                                <input type="text" matInput placeholder="Del." required>
+                                <input type="text" value="Miguel Hidalgo" matInput placeholder="Del." required>
                             </mat-form-field>
                         </div>
                         <div class="col">
                             <mat-form-field class="full-width">
-                                <input type="text" matInput placeholder="Col." required>
+                                <input type="text" value="Polanco" matInput placeholder="Col." required>
                             </mat-form-field>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <mat-form-field class="full-width">
-                                <input type="text" matInput placeholder="Ciudad" required>
+                                <input type="text" value="Mexico" matInput placeholder="Ciudad" required>
                             </mat-form-field>
                         </div>
                         <div class="col">
                             <mat-form-field class="full-width">
-                                <input type="text" matInput placeholder="País" required>
+                                <input type="text" value="Mexico" matInput placeholder="País" required>
                             </mat-form-field>
                         </div>
                     </div>
                     <mat-form-field class="full-width">
-                        <textarea matInput placeholder="Descripción general de la propiedad" required></textarea>
+                        <textarea matInput value="Descripción" placeholder="Descripción general de la propiedad" required></textarea>
                     </mat-form-field>
                 </form>
             </div>
