--- a/segurenta/src/app/components/update-renter/update-renter.component.html
+++ b/segurenta/src/app/components/update-renter/update-renter.component.html
@@ -1,3 +1,40 @@
+<div class="txt-right">
+    <h2 mat-dialog-title><small class="txt-title-muted">Editar </small><span class="txt-title"> {{ title }}</span></h2>
+    <mat-grid-list cols="12" rowHeight="1:5">
+        <mat-grid-tile colspan="5" style="margin-left:1%;">
+            <form [formGroup]="registerForm" (ngSubmit)="register()" novalidate="novalidate">
+                <mat-form-field class="full-width">
+                    <input type="text" class="input-form" matInput placeholder="Nombre(s)" [(ngModel)]="renter.names" formControlName="names" required>
+                    <mat-error *ngIf="registerForm.get('names').invalid">{{getErrorMessageNames()}}</mat-error>
+                </mat-form-field>
+                <mat-form-field style="padding-right: 10%;">
+                    <input type="text" class="input-form" matInput placeholder="Apellido Paterno" [(ngModel)]="renter.firstLastName" formControlName="firstLastName" required>
+                    <mat-error *ngIf="registerForm.get('firstLastName').invalid">{{getErrorMessageF()}}</mat-error>
+                </mat-form-field>
+                <mat-form-field>
+                    <input type="text" class="input-form" matInput placeholder="Apellido Materno" [(ngModel)]="renter.secondLastName" formControlName="secondLastName" required>
+                    <mat-error *ngIf="registerForm.get('secondLastName').invalid">{{getErrorMessageS()}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="full-width">
+                    <input type="tel" class="input-form" matInput placeholder="Teléfono" [(ngModel)]="renter.phoneNumber" formControlName="phoneNumber" required>
+                    <mat-error *ngIf="registerForm.get('phoneNumber').invalid">{{getErrorMessagePhone()}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="full-width">
+                    <input type="email" class="input-form" matInput placeholder="Correo Electrónico" [(ngModel)]="renter.email" formControlName="email" required>
+                    <mat-error *ngIf="registerForm.get('email').invalid">{{getErrorMessageEmail()}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="full-width">
+                    <input type="password" class="input-form" matInput placeholder="Contraseña" #renter.password formControlName="password" required>
+                    <mat-error *ngIf="registerForm.get('password').invalid">{{getErrorMessagePass()}}</mat-error>
+                </mat-form-field>
+                <button class="btn-rounded full-width" style="margin-top: 5%;" mat-raised-button>Registrarme</button>
+              </form>
+            </mat-grid-tile>
+    </mat-grid-list>
+</div>
+
+
+<!-- 
 <div *ngIf="isRenter" class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
       <div class="modal-content">
@@ -93,4 +130,4 @@
           </div>
         </div>
         
-      </div>
+      </div> -->
