--- a/segurenta/src/app/components/home-rent/home-rent.component.html
+++ b/segurenta/src/app/components/home-rent/home-rent.component.html
@@ -59,8 +59,6 @@
         </div>
     </div>
 
-    
-
     <!-- Second section: Opciones -->
     <div class="row col-12 m-0 p-0 ">
         <div class="col-sm text-center text-white pt-3" style="background-color: black;border-right: 1px solid white;">
@@ -82,7 +80,7 @@
             </div>
             <div class="btn-group-vertical align-items-center mx-5">
                 <a>
-                    <button (click)="openRegisterProperty()" class="btn btn-outline-dark rounded-circle" style="height: 100px; width: 100px; color: white">
+                    <button class="btn btn-outline-dark rounded-circle" style="height: 100px; width: 100px; color: white">
                       <fa-icon [icon]="[ 'fas', 'plus']" size="2x"></fa-icon>
                     </button>
                 </a>
@@ -108,75 +106,76 @@
     </div>
 
     <div class="row col-sm-12 m-0 p-0">
-            <div class="col-sm-12 my-4">
-                <h2 class="font-weight-bold"><span class="text-muted"><u>P</u>ropiedades</span> Más Recientes</h2>
-            </div>
-            <div class="col-sm-12">
-                <div class="card-columns">
-                    <div class="card border-light" *ngFor="let picture of pictures">
-                        <img class="card-img-top" [src]="picture.img">
-                        <div class="card-img-overlay col-sm-12">
-                            <div class="card-title">
-                                <p class="h4 text-white d-inline"><b>{{ picture.state }}</b></p>
-                                <div class="text-white d-inline float-right">
-                                    <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] " size="2x "></fa-icon>
-                                    <fa-icon class="pr-3 " [icon]="[ 'far', 'heart'] " size="2x "></fa-icon>
-                                    <fa-icon [icon]="[ 'far', 'comment-alt'] " size="2x "></fa-icon>
-                                </div>
-                            </div>
-                            <div class="card-text d-flex bd-highlight">
-                                <div class="card-text w-100 ">
-                                    <p class="h4 text-white ">{{ picture.title }}</p>
-                                    <p class="card-text text-white ">{{ picture.location }}</p>
-                                </div>
-                                <div class="card-text flex-shrink-1 ">
-                                    <p class="h4 text-white ">${{ picture.price }}</p>
-                                    <p class="card-text text-white text-right ">{{ picture.period }}</p>
-                                </div>
+        <div class="col-sm-12 my-4">
+            <h2 class="font-weight-bold"><span class="text-muted"><u>P</u>ropiedades</span> Más Recientes</h2>
+        </div>
+        <div class="col-sm-12">
+            <div class="card-columns">
+                <div class="card border-light" *ngFor="let picture of pictures">
+                    <img class="card-img-top" [src]="picture.img">
+                    <div class="card-img-overlay col-sm-12">
+                        <div class="card-title">
+                            <p class="h4 text-white d-inline"><b>{{ picture.state }}</b></p>
+                            <div class="text-white d-inline float-right">
+                                <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] " size="2x "></fa-icon>
+                                <fa-icon class="pr-3 " [icon]="[ 'far', 'heart'] " size="2x "></fa-icon>
+                                <fa-icon [icon]="[ 'far', 'comment-alt'] " size="2x "></fa-icon>
                             </div>
                         </div>
-                        <div class="card-body ">
-                            <p class="card-text ">
-                                <fa-icon [icon]="[ 'fas', 'expand-arrows-alt'] " size="2x "></fa-icon> 50&nbsp;&nbsp;
-                                <fa-icon [icon]="[ 'fas', 'bed'] " size="2x "></fa-icon> 2&nbsp;&nbsp;
-                                <fa-icon [icon]="[ 'fas', 'toilet'] " size="2x "></fa-icon> 1&nbsp;&nbsp;
-                                <!-- <fa-icon [icon]="[ 'fas', 'plus-circle'] " size="2x "></fa-icon> -->
-                            </p>
+                        <div class="card-text d-flex bd-highlight">
+                            <div class="card-text w-100 ">
+                                <p class="h4 text-white ">{{ picture.title }}</p>
+                                <p class="card-text text-white ">{{ picture.location }}</p>
+                            </div>
+                            <div class="card-text flex-shrink-1 ">
+                                <p class="h4 text-white ">${{ picture.price }}</p>
+                                <p class="card-text text-white text-right ">{{ picture.period }}</p>
+                            </div>
                         </div>
+                    </div>
+                    <div class="card-body ">
+                        <p class="card-text ">
+                            <fa-icon [icon]="[ 'fas', 'expand-arrows-alt'] " size="2x "></fa-icon> 50&nbsp;&nbsp;
+                            <fa-icon [icon]="[ 'fas', 'bed'] " size="2x "></fa-icon> 2&nbsp;&nbsp;
+                            <fa-icon [icon]="[ 'fas', 'toilet'] " size="2x "></fa-icon> 1&nbsp;&nbsp;
+                            <!-- <fa-icon [icon]="[ 'fas', 'plus-circle'] " size="2x "></fa-icon> -->
+                        </p>
                     </div>
                 </div>
             </div>
-    
         </div>
 
-       <!-- Fifth section: Mis Propiedades  -->
+    </div>
+
+    <!-- Fifth section: Mis Propiedades  -->
     <div class="row col-sm-12 m-0 p-0 " style="height: 400px ">
-            <img src="./assets/img/imgPrueba4.jpg " class="img-fluid w-100 " />
-            <div class="img-overlay ">
-                <div class="row align-items-center text-center p-0 m-0 ">
-                    <div class="col-sm ">
-                        <div class="col-sm-12 mx-0 p-0 my-4 ">
-                            <p class="h3"><strong>¿Quieres <span class="h1 ">Publicar</span>?</strong></p>
-                            <p class="h3"><strong>Unete a SeguRenta</strong></p>
-                        </div>
-                        <button class="btn btn-outline-dark m-1 " type="button ">Beneficios</button>
-                        <button class="btn btn-dark m-1 " type="button ">Regístrate</button>
+        <img src="./assets/img/imgPrueba4.jpg " class="img-fluid w-100 " />
+        <div class="img-overlay ">
+            <div class="row align-items-center text-center p-0 m-0 ">
+                <div class="col-sm ">
+                    <div class="col-sm-12 mx-0 p-0 my-4 ">
+                        <p class="h3"><strong>¿Quieres <span class="h1 ">Publicar</span>?</strong></p>
+                        <p class="h3"><strong>Unete a SeguRenta</strong></p>
                     </div>
-                    <div class="col-sm ">
-                        <div class="col-sm-12 ">
-                            <a href="{{linkAppStore}}" target="_blank " class="bg-transparent m-1 ">
-                                <img src="./assets/img/appstore.png ">
-                            </a>
-                            <a href="{{linkPlayStore}}" target="_blank " class="bg-transparent m-1 ">
-                                <img src="./assets/img/googleplay.png ">
-                            </a>
-                        </div>
+                    <button class="btn btn-outline-dark m-1 " type="button ">Beneficios</button>
+                    <button class="btn btn-dark m-1 " type="button ">Regístrate</button>
+                </div>
+                <div class="col-sm ">
+                    <div class="col-sm-12 ">
+                        <a href="{{linkAppStore}}" target="_blank " class="bg-transparent m-1 ">
+                            <img src="./assets/img/appstore.png ">
+                        </a>
+                        <a href="{{linkPlayStore}}" target="_blank " class="bg-transparent m-1 ">
+                            <img src="./assets/img/googleplay.png ">
+                        </a>
                     </div>
                 </div>
-    
             </div>
+
         </div>
-      
+    </div>
+
+
     <!-- Fourth section: Mis Citas / En Proceso  -->
     <div class="row col-12 m-0 p-0 ">
         <div class="col">
@@ -205,9 +204,8 @@
                                 </div>
                             </div>
                             <div class="card-body px-0">
-                                    <p class="text-success m-0">{{ picture.title }}</p>
+                                <p class="text-success m-0">{{ picture.title }}</p>
                                 <button class="btn btn-sm btn-outline-dark float-right" style="border-radius: 15px;" type="button ">Reagendar</button>
-                                
                             </div>
                         </div>
                     </div>
@@ -314,7 +312,34 @@
         </div>
     </div>
 
-   
+    <!-- Fifth section: Mis Propiedades  -->
+    <!-- <div class="row col-sm-12 m-0 p-0 " style="height: 400px ">
+        <img src="./assets/img/imgPrueba4.jpg " class="img-fluid w-100 " />
+        <div class="img-overlay ">
+            <div class="row align-items-center text-center p-0 m-0 ">
+                <div class="col-sm ">
+                    <div class="col-sm-12 mx-0 p-0 my-4 ">
+                        <p class="h3"><strong>¿Quieres <span class="h1 ">Publicar</span>?</strong></p>
+                        <p class="h3"><strong>Unete a SeguRenta</strong></p>
+                    </div>
+                    <button class="btn btn-outline-dark m-1 " type="button ">Beneficios</button>
+                    <button class="btn btn-dark m-1 " type="button ">Regístrate</button>
+                </div>
+                <div class="col-sm ">
+                    <div class="col-sm-12 ">
+                        <a href="{{linkAppStore}}" target="_blank " class="bg-transparent m-1 ">
+                            <img src="./assets/img/appstore.png ">
+                        </a>
+                        <a href="{{linkPlayStore}}" target="_blank " class="bg-transparent m-1 ">
+                            <img src="./assets/img/googleplay.png ">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div> -->
+
     <!-- Sixth section: Explorar -->
     <div class="row col-12 m-0 p-0 ">
         <div class="col-sm " style="background-color: #0D62B7;border-right: 1px solid white; ">
