--- a/segurenta/src/app/components/register-property/register-property.component.html
+++ b/segurenta/src/app/components/register-property/register-property.component.html
@@ -15,9 +15,10 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <img src="./assets/img/imgVideo.png" class="img-thumbnail">
+                    <app-upload-video></app-upload-video>
                 </div>
             </div>
+            <button class="btn btn-outline-dark btn-sm" matStepperNext>Siguiente</button>
         </form>
     </mat-step>
     <mat-step>
@@ -54,8 +55,8 @@
                 <mat-label> Mantenimiento</mat-label>
             </div>
             <div>
-                <button mat-button matStepperPrevious>Back</button>
-                <button mat-button matStepperNext>Next</button>
+                <button class="btn btn-outline-dark btn-sm" matStepperPrevious>Anterior</button>
+                <button class="btn btn-outline-dark btn-sm" matStepperNext>Siguiente</button>
             </div>
         </form>
     </mat-step>
@@ -63,7 +64,9 @@
         <ng-template matStepLabel>Dirección</ng-template>
         <h3>Dirección de la Propiedad</h3>
         <div class="col-12 row">
-            <div class="col-5"></div>
+            <div class="col-5">
+                <app-map></app-map>
+            </div>
             <div class="col">
                 <form autocomplete="off">
                     <mat-form-field class="full-width">
@@ -109,6 +112,10 @@
                         <textarea matInput placeholder="Descripción general de la propiedad" required></textarea>
                     </mat-form-field>
                 </form>
+                <div>
+                    <button class="btn btn-outline-dark btn-sm" matStepperPrevious>Anterior</button>
+                    <button class="btn btn-outline-dark btn-sm" matStepperNext>Siguiente</button>
+                </div>
             </div>
         </div>
     </mat-step>
@@ -140,19 +147,20 @@
                         </label>
                     </div>
                 </div>
-               
+                <div class="col-12">
+                    <h3>Comodidades</h3>
+                    <div class="form-check form-check-inline col-4" *ngFor="let item of amenities">
+                        <input class="form-check-input" type="checkbox" [id]="'A' + item.id">
+                        <label class="form-check-label" [for]="'A' + item.id">
+                                {{ item.value }}
+                        </label>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="row">
-                <div class="col-12">
-                        <h3>Comodidades</h3>
-                        <div class="form-check form-check-inline col-4" *ngFor="let item of amenities">
-                            <input class="form-check-input" type="checkbox" [id]="'A' + item.id">
-                            <label class="form-check-label" [for]="'A' + item.id">
-                                    {{ item.value }}
-                            </label>
-                        </div>
-                    </div>
+        <div>
+            <button class="btn btn-outline-dark btn-sm" matStepperPrevious>Anterior</button>
+            <button class="btn btn-outline-dark btn-sm" [routerLink]="['property-detail']" (click)="closeDialog()">Guardar</button>
         </div>
     </mat-step>
 </mat-vertical-stepper>
